syntax = "proto3";
package jackaldao.canine.storage;

option go_package = "github.com/jackal-dao/canine/x/storage/types";

// Msg defines the Msg service.
service Msg {
  rpc PostContract(MsgPostContract) returns (MsgPostContractResponse);
  rpc Postproof(MsgPostproof) returns (MsgPostproofResponse);
  rpc SignContract(MsgSignContract) returns (MsgSignContractResponse);
  rpc SetProviderIP(MsgSetProviderIP) returns (MsgSetProviderIPResponse);
  rpc SetProviderTotalspace(MsgSetProviderTotalspace)
      returns (MsgSetProviderTotalspaceResponse);
  rpc InitProvider(MsgInitProvider) returns (MsgInitProviderResponse);
  rpc CancelContract(MsgCancelContract) returns (MsgCancelContractResponse);
  rpc BuyStorage(MsgBuyStorage) returns (MsgBuyStorageResponse);
  rpc ClaimStray(MsgClaimStray) returns (MsgClaimStrayResponse);
  // this line is used by starport scaffolding # proto/tx/rpc
}

message MsgPostContract {
  string creator = 1;
  string merkle = 2;
  string signee = 3;
  string filesize = 4;
  string fid = 5;
}

message MsgPostContractResponse {}

message MsgPostproof {
  string creator = 1;
  string item = 2;
  string hashlist = 3;
  string cid = 4;
}

message MsgPostproofResponse { string merkle = 1; }

message MsgSignContract {
  string creator = 1;
  string cid = 2;
}

message MsgSignContractResponse {}

message MsgSetProviderIP {
  string creator = 1;
  string ip = 2;
}

message MsgSetProviderIPResponse {}

message MsgSetProviderTotalspace {
  string creator = 1;
  string space = 2;
}

message MsgSetProviderTotalspaceResponse {}

message MsgInitProvider {
  string creator = 1;
  string ip = 2;
  string totalspace = 3;
}

message MsgInitProviderResponse {}

message MsgCancelContract {
  string creator = 1;
  string cid = 2;
}

message MsgCancelContractResponse {}

message MsgBuyStorage {
  string creator = 1;
  string forAddress = 2;
  string duration = 3;
  string bytes = 4;
  string paymentDenom = 5;
}

message MsgBuyStorageResponse {}

message MsgClaimStray {
  string creator = 1;
  string cid = 2;
}

message MsgClaimStrayResponse {}

// this line is used by starport scaffolding # proto/tx/message